; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-migor/extr_lcd_qvga.c_read_reg16.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-migor/extr_lcd_qvga.c_read_reg16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sh_mobile_lcdc_sys_bus_ops = type { i64 (i8*)*, i32 (i8*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, %struct.sh_mobile_lcdc_sys_bus_ops*, i16)* @read_reg16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @read_reg16(i8* %0, %struct.sh_mobile_lcdc_sys_bus_ops* %1, i16 zeroext %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sh_mobile_lcdc_sys_bus_ops*, align 8
  %6 = alloca i16, align 2
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store %struct.sh_mobile_lcdc_sys_bus_ops* %1, %struct.sh_mobile_lcdc_sys_bus_ops** %5, align 8
  store i16 %2, i16* %6, align 2
  %8 = load %struct.sh_mobile_lcdc_sys_bus_ops*, %struct.sh_mobile_lcdc_sys_bus_ops** %5, align 8
  %9 = getelementptr inbounds %struct.sh_mobile_lcdc_sys_bus_ops, %struct.sh_mobile_lcdc_sys_bus_ops* %8, i32 0, i32 1
  %10 = load i32 (i8*, i32)*, i32 (i8*, i32)** %9, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = load i16, i16* %6, align 2
  %13 = call i32 @adjust_reg18(i16 zeroext %12)
  %14 = call i32 %10(i8* %11, i32 %13)
  %15 = load %struct.sh_mobile_lcdc_sys_bus_ops*, %struct.sh_mobile_lcdc_sys_bus_ops** %5, align 8
  %16 = getelementptr inbounds %struct.sh_mobile_lcdc_sys_bus_ops, %struct.sh_mobile_lcdc_sys_bus_ops* %15, i32 0, i32 0
  %17 = load i64 (i8*)*, i64 (i8*)** %16, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i64 %17(i8* %18)
  store i64 %19, i64* %7, align 8
  %20 = load i64, i64* %7, align 8
  %21 = lshr i64 %20, 1
  %22 = and i64 %21, 255
  %23 = load i64, i64* %7, align 8
  %24 = lshr i64 %23, 2
  %25 = and i64 %24, 65280
  %26 = or i64 %22, %25
  ret i64 %26
}

declare dso_local i32 @adjust_reg18(i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
